Project

General

Profile

Actions

Bug #37264

closed

scrub warning check incorrectly uses mon scrub interval

Added by David Zafman over 5 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
David Zafman
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous, mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

When checking the mon_warn_not_scrubbed the mon_scrub_interval is used instead of osd_scrub_max_interval.


Related issues 3 (0 open3 closed)

Related to RADOS - Bug #27988: Warn if queue of scrubs ready to run exceeds some thresholdRejectedDavid Zafman

Actions
Copied to RADOS - Backport #38243: mimic: scrub warning check incorrectly uses mon scrub intervalResolvedDavid ZafmanActions
Copied to RADOS - Backport #38244: luminous: scrub warning check incorrectly uses mon scrub intervalResolvedDavid ZafmanActions
Actions #1

Updated by David Zafman over 5 years ago

  • Backport set to luminous, mimic
Actions #2

Updated by David Zafman over 5 years ago

The scrub warning also doesn't consider the pool specific scrub interval if specified. The scrub code gets the pool specific interval before falling back to the osd_deep_scrub_interval configuration.

pool.info.opts.get(pool_opts_t::DEEP_SCRUB_INTERVAL, &deep_scrub_interval);

Not sure where in the monitor the pool specific information is stored.

Actions #3

Updated by David Zafman over 5 years ago

  • Related to Bug #27988: Warn if queue of scrubs ready to run exceeds some threshold added
Actions #4

Updated by Greg Farnum over 5 years ago

You should be able to get the pool info out of the monitor's OSDMap, if that was a question... :)

Actions #6

Updated by David Zafman over 5 years ago

  • Status changed from New to In Progress
Actions #7

Updated by David Zafman over 5 years ago

  • Status changed from In Progress to 17
Actions #8

Updated by David Zafman over 5 years ago

  • Status changed from 17 to Pending Backport
  • Pull request ID set to 25112
Actions #9

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #38243: mimic: scrub warning check incorrectly uses mon scrub interval added
Actions #10

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #38244: luminous: scrub warning check incorrectly uses mon scrub interval added
Actions #11

Updated by David Zafman about 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF