mon: Fix scrub health warning handling

Make this mon_warn code clearer since it involves 2 values
Code used mon scrub interval instead of pg scrub interval
Fix scrub warniing handling use per-pool intervals when specified

Fixes: http://tracker.ceph.com/issues/37264

Signed-off-by: David Zafman <dzafman@redhat.com>
(cherry picked from commit 6a9895b97a2b2fb533092f294e45fede154a7f82)

Modified from master to leave config name alone and not to use ratio

(cherry picked from commit 5f3dc9b76e971f23625da78a6f05333c621b210e)